--- a/Vista/Seccion/Cliente/RCliente.html
+++ b/Vista/Seccion/Cliente/RCliente.html
@@ -13,14 +13,14 @@
                 <p class="letra2">Nombre:  
             </div>
             <div class="col-md-3">
-                <input name="nombre" type="text" class="form-control ">
+                <input required name="nombre" type="text" class="form-control ">
             </div>
             <div class="col-md-2"></div>
             <div class="col-md-1">
                 <p class="letra2">Apellido: 
             </div>
             <div class="col-md-3">
-                <input name="apellido" type="text" class="form-control ">
+                <input required name="apellido" type="text" class="form-control ">
             </div>
             <div class="col-md-1"></div>
         </div>
@@ -31,14 +31,14 @@
                 <p class="letra2">Dni:  
             </div>
             <div class="col-md-3">
-                <input name="dni" type="text" class="form-control ">
+                <input required name="dni" type="number" class="form-control ">
             </div>
             <div class="col-md-2"></div>
             <div class="col-md-1">
                 <p class="letra2">Telefono: 
             </div>
             <div class="col-md-3">
-                <input name="telefono" type="text" class="form-control ">
+                <input required name="telefono" type="number" class="form-control ">
             </div>
             <div class="col-md-1"></div>
         </div>
