--- a/Vista/Seccion/Proveedor/RProveedor.html
+++ b/Vista/Seccion/Proveedor/RProveedor.html
@@ -13,14 +13,14 @@
                 <p class="letra2">Codigo:  
             </div>
             <div class="col-md-3">
-                <input name="codigo" type="text" class="form-control ">
+                <input required name="codigo" type="text" class="form-control ">
             </div>
             <div class="col-md-2"></div>
             <div class="col-md-1">
                 <p class="letra2">NIT: 
             </div>
             <div class="col-md-3">
-                <input name="nit" type="text" class="form-control ">
+                <input required name="nit" type="text" class="form-control ">
             </div>
             <div class="col-md-1"></div>
         </div>
@@ -31,7 +31,7 @@
                 <p class="letra2">Nombre:  
             </div>
             <div class="col-md-3">
-                <input name="nombre" type="text" class="form-control ">
+                <input required name="nombre" type="text" class="form-control ">
             </div>
             <div class="col-md-2"></div>
             <div class="col-md-1">
@@ -49,14 +49,14 @@
                 <p class="letra2">Telefono:  
             </div>
             <div class="col-md-3">
-                <input name="telefono" type="text" class="form-control ">
+                <input required name="telefono" type="text" class="form-control ">
             </div>
             <div class="col-md-2"></div>
             <div class="col-md-1">
-                <p class="letra2">Cuenta bancaria: 
+                <p class="letra2">E-mail: 
             </div>
             <div class="col-md-3">
-                <input name="cuentaBancaria" type="text" class="form-control ">
+                <input required name="email" type="text" class="form-control ">
             </div>
             <div class="col-md-1"></div>
         </div>
@@ -64,19 +64,19 @@
         <div class="row">
             <div class="col-md-1"></div>
             <div class="col-md-1">
-                <p class="letra2">N&ordm; Cuenta bancaria:  
+                <p class="letra2">Tipo cuenta bancaria:  
             </div>
             <div class="col-md-3">
                 <br>
-                <input name="nCuentaBancaria" type="text" class="form-control ">
+                <input required name="tipoCuentaBancaria" type="text" class="form-control ">
             </div>
             <div class="col-md-2"></div>
             <div class="col-md-1">
-                <p class="letra2">Nombre del contacto: 
+                <p class="letra2">N&ordm; cuenta bancaria: 
             </div>
             <div class="col-md-3">
                 <br>
-                <input name="nombreContacto" type="text" class="form-control ">
+                <input required name="nCuentaBancaria" type="text" class="form-control ">
             </div>
             <div class="col-md-1"></div>
         </div>
@@ -84,16 +84,17 @@
         <div class="row">
             <div class="col-md-1"></div>
             <div class="col-md-1">
-                <p class="letra2">E-Mail:  
+                <p class="letra2">Cuenta Bancaria:  
             </div>
             <div class="col-md-3">
-                <input name="email" type="text" class="form-control ">
+                <input required name="cuentaBancaria" type="text" class="form-control ">
             </div>
             <div class="col-md-2"></div>
             <div class="col-md-1">
+                <p class="letra2">Nombre contacto: 
             </div>
             <div class="col-md-3">
-
+                <input required name="nombreContacto" type="text" class="form-control ">
             </div>
             <div class="col-md-1"></div>
         </div>
