--- a/Vista/Seccion/Cliente/CCliente.html
+++ b/Vista/Seccion/Cliente/CCliente.html
@@ -4,17 +4,19 @@
     <h1 class="letra3">Consultar Cliente</h1>
 </center>
 <br>
-<form action="../Script/ScriptCliente.php" method="post">
+<form name="form" action="../Script/ScriptCliente.php" method="post">
     <div class="container">
         <div class="row">
             <div class="col-md-2">
                 <p class="letra2">Tipo de dato:  
             </div>
             <div class="col-md-2">
-                <select name="sel" class="form-control" id="sel2">
-                    <option>Nombre</option>
-                    <option>Apellido</option>
-                    <option>Dni</option>
+                <select required name="sel" class="form-control" id="sel" onchange="capturar()">
+                    <option value="" >Seleccione</option>
+                    <option value="Todos" >Todos</option>
+                    <option value="Nombre" >Nombre</option>
+                    <option value="Apellido">Apellido</option>
+                    <option value="Dni">Dni</option>
                 </select>
             </div>
             <div class="col-md-1"></div>
@@ -22,7 +24,7 @@
                 <p class="letra2">Informacion:  
             </div>
             <div class="col-md-2">
-                <input name="informacion" type="text" class="form-control ">
+                <input id="informacion" name="informacion" type="text" class="form-control ">
             </div>
             <div class="col-md-2">
                 <button name="buscar" type="submit" class="btn btn-success  letra">
@@ -51,18 +53,23 @@
                             <th>Telefono</th>
                             <th>Direccion</th>
                             <th>E-mail</th>
+                            <th></th>
                         </tr>
                     </thead>
                     <?php for($a=0;$a<count($valor);$a++): ?>
 
                     <tr>
-                        <th><?php echo  $valor[$a][1] ?></th>
-                        <th><?php echo  $valor[$a][2]?></th>
-                        <th><?php echo  $valor[$a][0] ?></th>
-                        <th><?php echo  $valor[$a][4] ?></th>
-                        <th><?php echo  $valor[$a][3] ?></th>
-                        <th><?php echo  $valor[$a][5] ?></th>
-
+                        <td><?php echo  $valor[$a][1] ?></td>
+                        <td><?php echo  $valor[$a][2]?></td>
+                        <td><?php echo  $valor[$a][0] ?></td>
+                        <td><?php echo  $valor[$a][4] ?></td>
+                        <td><?php echo  $valor[$a][3] ?></td>
+                        <td><?php echo  $valor[$a][5] ?></td>
+                        <td>
+                            <a onclick="window.location='../Script/ScriptCliente.php?dni='+'<?php echo  $valor[$a][0] ?>'" style="cursor: pointer;">
+                                <span class="glyphicon glyphicon-pencil asd "></span>
+                            </a>
+                        </td>
 
                     </tr>
                     <?php endfor; ?>
