--- a/Vista/Seccion/Empleado/CEmpleado.html
+++ b/Vista/Seccion/Empleado/CEmpleado.html
@@ -39,7 +39,8 @@
 <?php if( $valor !=null): ?>
 <div class="container">
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-1"></div>
+        <div class="col-md-10">
             <div class="table-responsive">
                 <table class="table">
                     <thead>
@@ -52,21 +53,19 @@
                             <th>Fecha Ingreso</th>
                             <th>Fecha Salida</th>
                             <th>Celular</th>
-                            <th>Seguridad Social</th>
                         </tr>
                     </thead>
                     <?php for($a=0;$a<count($valor);$a++): ?>
 
                     <tr>
-                        <th><?php echo  $valor[$a][0] ?></th>
-                        <th><?php echo  $valor[$a][1]?></th>
-                        <th><?php echo  $valor[$a][2] ?></th>
-                        <th><?php echo  $valor[$a][3] ?></th>
-                        <th><?php echo  $valor[$a][4] ?></th>
-                        <th><?php echo  $valor[$a][5] ?></th>
-                        <th><?php echo  $valor[$a][6] ?></th>
-                        <th><?php echo  $valor[$a][7] ?></th>
-                        <th><?php echo  $valor[$a][8] ?></th>
+                        <td><?php echo  $valor[$a][0] ?></td>
+                        <td><?php echo  $valor[$a][1]?></td>
+                        <td><?php echo  $valor[$a][2] ?></td>
+                        <td><?php echo  $valor[$a][3] ?></td>
+                        <td><?php echo  $valor[$a][4] ?></td>
+                        <td><?php echo  $valor[$a][5] ?></td>
+                        <td><?php echo  $valor[$a][6] ?></td>
+                        <td><?php echo  $valor[$a][7] ?></td>
 
 
                     </tr>
@@ -75,6 +74,8 @@
                 </table>
             </div>
         </div>
+        <div class="col-md-1"></div>
+
     </div>
 </div>
 <?php endif; ?>
