--- a/Vista/Seccion/Empleado/REmpleado.html
+++ b/Vista/Seccion/Empleado/REmpleado.html
@@ -1,28 +1,35 @@
-
+<?php
+require_once '../Controlador/ControlSucursal.php';
+$controlador = new ControlSucursal();
+$valor = $controlador->buscarSucursal("Todos", " ");
+?>
 <br>
 <br>
 <center>   
     <h1 class="letra3">Registro de empleado</h1>
 </center>
 <br>
-<form  action="../Script/ScriptEmpleado.php" method="post">
+<form  action="../Script/ScriptEmpleado.php" method="post" name="form2">
     <div class="container"> 
         <div class="row">
             <div class="col-md-1"></div>
             <div class="col-md-4">
-                <select name="sel1"class="form-control" id="sel1">
-                    <option>El Timbal</option>
-                    <option>Wave Sound</option>
-                    <option>Musicalizate</option>
+                <select name="sel1" class="form-control" id="sel1" required>
+                    <option value="">Seleccione</option>
+                    <?php for($a=0;$a<count($valor);$a++): ?>
+                    <option value="<?php echo  $valor[$a][0] ?>"><?php echo $valor[$a][1]?></option>
+                    <?php endfor; ?>
+
                 </select>
             </div>
             <div class="col-md-2"></div>
             <div class="col-md-4">
-                <select name="sel2" class="form-control" id="sel2">
-                    <option>Jefe de operaciones</option>
-                    <option>Cajero</option>
-                    <option>Administrador</option>
-                    <option>Vendedor</option>
+                <select name="sel2" class="form-control" id="sel2" required onchange="habilitar()">
+                    <option value="">Seleccione</option>
+                    <option value="Jefe de Operaciones">Jefe de operaciones</option>
+                    <option value="Cajero">Cajero</option>
+                    <option value="Administrador">Administrador</option>
+                    <option value="Vendedor">Vendedor</option>
 
                 </select>    
             </div>
@@ -35,14 +42,14 @@
                 <p class="letra2">Codigo:  
             </div>
             <div class="col-md-3">
-                <input name ="codigo" type="text" class="form-control ">
+                <input required name ="codigo" type="text" class="form-control ">
             </div>
             <div class="col-md-2"></div>
             <div class="col-md-1">
                 <p class="letra2">DNI: 
             </div>
             <div class="col-md-3">
-                <input name="dni" type="text" class="form-control ">
+                <input required name="dni" type="text" class="form-control ">
             </div>
             <div class="col-md-1"></div>
         </div>
@@ -53,14 +60,14 @@
                 <p class="letra2">Nombre:  
             </div>
             <div class="col-md-3">
-                <input name="nombre" type="text" class="form-control ">
+                <input required name="nombre" type="text" class="form-control ">
             </div>
             <div class="col-md-2"></div>
             <div class="col-md-1">
                 <p class="letra2">Apellido: 
             </div>
             <div class="col-md-3">
-                <input name="apellido" type="text" class="form-control ">
+                <input required name="apellido" type="text" class="form-control ">
             </div>
             <div class="col-md-1"></div>
         </div>
@@ -78,7 +85,7 @@
                 <p class="letra2">Celular: 
             </div>
             <div class="col-md-3">
-                <input name="celular" type="text" class="form-control ">
+                <input required name="celular" type="text" class="form-control ">
             </div>
             <div class="col-md-1"></div>
         </div>
@@ -86,19 +93,17 @@
         <div class="row">
             <div class="col-md-1"></div>
             <div class="col-md-1">
-                <p class="letra2">N&ordm; Seguridad social:  
+                <p class="letra2">Contraseña:  
             </div>
             <div class="col-md-3">
-                <br>
-                <input name="nSeguridad" type="text" class="form-control ">
+                <input required id="contraseña" name="contraseña" type="text" class="form-control ">
             </div>
             <div class="col-md-2"></div>
             <div class="col-md-1">
-                <p class="letra2">Fecha de ingreso: 
+                <p class="letra2">E-mail: 
             </div>
             <div class="col-md-3">
-                <br>
-                <input name="fIngreso" type="text" class="form-control ">
+                <input name="email" type="text" class="form-control ">
             </div>
             <div class="col-md-1"></div>
         </div>
@@ -110,34 +115,19 @@
             </div>
             <div class="col-md-3">
 
-                <input name="direccion" type="text" class="form-control ">
+                <input  name="direccion" type="text" class="form-control ">
             </div>
             <div class="col-md-2"></div>
             <div class="col-md-1">
-                <p class="letra2">E-Mail: 
+                <p class="letra2">Fecha ingreso: 
             </div>
             <div class="col-md-3">
-                <input name="email" type="text" class="form-control ">
+                <br>
+                <input required name="fIngreso" type="text" class="form-control ">
             </div>
             <div class="col-md-1"></div>
         </div>
-        <br>
-        <div class="row">
-            <div class="col-md-1"></div>
-            <div class="col-md-1">
-                <p class="letra2">Contraseña:  
-            </div>
-            <div class="col-md-3">
 
-                <input name="contraseña" type="text" class="form-control ">
-            </div>
-            <div class="col-md-2"></div>
-            <div class="col-md-1">
-            </div>
-            <div class="col-md-3">
-            </div>
-            <div class="col-md-1"></div>
-        </div>
         <br>
         <br>
         <div class="row">
