--- a/Vista/Seccion/Sucursal/CSucursal.html
+++ b/Vista/Seccion/Sucursal/CSucursal.html
@@ -4,20 +4,6 @@
     <h1 class="letra3">Consultar sucursal</h1>
 </center>
 <br>
-<script>
-    function capturar() {
-        var posicion = document.getElementById("sucursal").options.selectedIndex;
-        var valor = document.getElementById("sucursal").options[posicion].text;
-        if (valor == "Todos") {
-            document.form.informacion.disabled = true;
-        } else {
-            document.form.informacion.disabled = false;
-
-        }
-    }
-
-
-</script>
 <form name="form" action="../Script/ScriptSucursal.php" method="post">
     <div class="container">
         <div class="row">
@@ -25,8 +11,8 @@
                 <p class="letra2">Tipo de dato:  
             </div>
             <div class="col-md-2">
-                <select  name="sel" id="sucursal" class="form-control"  onchange="capturar()" >
-                    <option selected value="Seleccione" >Seleccione</option>
+                <select name="sel" id="sel" class="form-control"  onchange="capturar()" required>
+                    <option value="" >Seleccione</option>
                     <option value="Todos" >Todos</option>
                     <option value="Codigo" >Codigo</option>
                     <option value="Nombre" >Nombre</option>
@@ -38,7 +24,7 @@
                 <p class="letra2">Informacion:  
             </div>
             <div class="col-md-2">
-                <input name="informacion" type="text" class="form-control ">
+                <input required id="informacion" name="informacion" type="text" class="form-control ">
             </div>
             <div class="col-md-2">
                 <button name="buscar" type="submit" class="btn btn-success  letra">
@@ -54,14 +40,12 @@
 <br>
 
 <?php if( $valor !=null): ?>
-
-
 <div class="container">
     <div class="row">
         <div class="col-md-1"></div>
         <div class="col-md-10">
             <div class="table-responsive">
-                <table class="table">
+                <table  class="table table-hover">
                     <thead>
                         <tr>
                             <th>Codigo</th>
@@ -72,11 +56,11 @@
                             <th>Direccion</th>
                             <th>Ciudad</th>
                             <th>Pais</th>
+                            <th></th>
                         </tr>
                     </thead>
                     <?php for($a=0;$a<count($valor);$a++): ?>
-
-                    <tr style='cursor:pointer' >
+                    <tr>
                         <td><?php echo  $valor[$a][0] ?></td>
                         <td><?php echo  $valor[$a][1]?></td>
                         <td><?php echo  $valor[$a][2] ?></td>
@@ -85,8 +69,13 @@
                         <td><?php echo  $valor[$a][5] ?></td>
                         <td><?php echo  $valor[$a][6] ?></td>
                         <td><?php echo  $valor[$a][7] ?></td>
+                        <td>
+                            <a onclick="window.location ='../Script/ScriptSucursal.php?codigo='+'<?php echo  $valor[$a][0] ?>'" style="cursor:pointer;">
+                                <span class="glyphicon glyphicon-pencil asd "></span>
+                            </a>
+                        </td>
+                    </tr> 
 
-                    </tr>
                     <?php endfor; ?>
 
                 </table>
